<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color01"
    tools:context=".splash.SplashScreenFragment">

    <TextView
        android:id="@+id/tvLetterC"
        android:layout_width="90dp"
        android:layout_height="150dp"
        android:fontFamily="@font/digital7"
        android:text="@string/c"
        android:textColor="@color/color02"
        android:textSize="180sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLetterG"
        android:layout_width="90dp"
        android:layout_height="150dp"
        android:fontFamily="@font/digital7"
        android:text="@string/eight"
        android:textColor="@color/color02_15"
        android:textSize="180sp"
        app:layout_constraintBottom_toBottomOf="@id/tvLetterC"
        app:layout_constraintLeft_toLeftOf="@id/tvLetterC"
        app:layout_constraintRight_toRightOf="@id/tvLetterC"
        app:layout_constraintTop_toTopOf="@id/tvLetterC" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tccm"
        android:text="@string/gamecast"
        android:layout_marginTop="5dp"
        android:textColor="@color/color02"
        android:textSize="20sp"
        android:alpha="0"
        android:textAllCaps="true"
        tools:alpha="100"
        app:layout_constraintLeft_toLeftOf="@id/tvLetterC"
        app:layout_constraintRight_toRightOf="@id/tvLetterC"
        app:layout_constraintTop_toBottomOf="@id/tvLetterC" />

</androidx.constraintlayout.widget.ConstraintLayout>