<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <View
        android:id="@+id/vBackgroundBlack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="@color/color02"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rlMenuContainer"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/background_menu"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="1.2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <LinearLayout
                android:id="@+id/llProfileContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/ibProfileMenu"
                    style="@style/MenuButton"
                    android:clickable="false"
                    android:contentDescription="@string/my_profile"
                    android:src="@drawable/ic_menu_profile" />

                <TextView
                    style="@style/MenuTitles"
                    android:text="@string/my_profile" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/llConfigContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/ibConfigMenu"
                    style="@style/MenuButton"
                    android:clickable="false"
                    android:contentDescription="@string/configuration"
                    android:src="@drawable/ic_menu_config" />

                <TextView
                    style="@style/MenuTitles"
                    android:text="@string/configuration" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPoolsContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/ibPoolsMenu"
                    style="@style/MenuButton"
                    android:clickable="false"
                    android:contentDescription="@string/configuration"
                    android:src="@drawable/ic_menu_pools" />

                <TextView
                    style="@style/MenuTitles"
                    android:text="@string/my_pools" />

            </LinearLayout>

        </LinearLayout>


        <ImageButton
            android:id="@+id/ibCloseMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/close"
            android:padding="6dp"
            android:src="@drawable/ic_cancel" />

    </RelativeLayout>

</merge>